--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = [
-    "@openzepplin/contracts=lib/openzepplin-contracts/contracts"
+    "@openzepplin/contracts=lib/openzepplin-contracts/contracts",
+    "murky/=lib/murky/"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
