add Makefile and add foundry devops alias

--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,8 @@ out = "out"
 libs = ["lib"]
 remappings = [
     "@openzepplin/contracts=lib/openzepplin-contracts/contracts",
-    "murky/=lib/murky/"
+    "murky/=lib/murky/",
+    "foundry-devops/=lib/foundry-devops"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
